[package]
name = "split-digits"
version = "0.2.1"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/split-digits"
license = "MIT"
description = "library to parse and interpret poetic source code"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false
